fix: revert prev. commit. use inline style in footer
this makes the highlighting not look weird

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,6 @@ body {
 	background-color: #333;	
 	top: 0;
 	overflow: hidden;
-	padding: 0.7rem
 }
 
 .bar a, .bar p {
@@ -63,6 +62,7 @@ body {
 	display: block;
 	color: white;
 	text-align: center;
+	padding: 0.7rem 0;
 	text-decoration: none;
 	margin: 0;
 }
